GDA-6009 i05 convert to new structure